Update first pages

--- a/Documentation/LaTeX/main.tex
+++ b/Documentation/LaTeX/main.tex
@@ -26,17 +26,17 @@
 %%%----------------------------------------------------------
 
 %%% Einträge für ALLE Arbeiten: -----------------------------
-\title{Partielle Lösungen zur allgemeinen Problematik}
-\author{Alex A.\ Schlaumeier}
+\title{Algorithmen für verteilte Systeme in unbemannten Luftfahrzeugen}
+\author{Artsiom Kaliaha}
 
 %\programtype{Fachhochschul-Bachelorstudiengang}		% select/edit
-\programtype{Fachhochschul-Masterstudiengang}
+\programtype{Fachhochschul-Bachelorstudiengang}
 
-\programname{Universal Computing}
+\programname{Automotive Computing}
 \placeofstudy{Hagenberg}
-\dateofsubmission{2021}{07}{15}	% {YYYY}{MM}{DD}
+\dateofsubmission{2021}{02}{01}	% {YYYY}{MM}{DD}
 
-\advisor{Alois B.~Treuer, Päd.\ Phil.}	% optional
+\advisor{Mag. Dipl.-Ing. Dr. Andreas Müller B.Sc.}	% optional
 
 %\strictlicense		%%% restrictive license instead of Creative Commons (discouraged!)
 
@@ -51,7 +51,7 @@
 \maketitle
 \tableofcontents
 
-\include{front/vorwort} 				% Vorwort ist optional
+%\include{front/vorwort} 				% Vorwort ist optional
 \include{front/kurzfassung}		
 \include{front/abstract}			
 
