--- a/Documentation/LaTeX/main.tex
+++ b/Documentation/LaTeX/main.tex
@@ -23,6 +23,7 @@
 {\par\vspace{\abovedisplayskip}\noindent
 	\tabularx{\columnwidth}{>{$}l<{$} @{\ : } >{\raggedright\arraybackslash}X}}
 {\endtabularx\par\vspace{\belowdisplayskip}}
+% TODO: \usepackage{graphicx} required
 
 \graphicspath{{images/}}    % Verzeichnis mit Bildern und Grafiken
 \logofile{logo}							% Logo-Datei = images/logo.pdf (\logofile{}, wenn kein Logo gewünscht)
