Add bibliography till concurrency models

--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -1,5 +1,168 @@
 %%% Biber accepts '%' for marking comments
 
+%%%%%%%%%%%%% multi-agent systems %%%%%%%%%%%%%
+
+@BOOK{Salamon2011,
+	title = {Design of Agent-Based Models : Developing Computer Simulations for
+	a Better Understanding of Social Processes},
+	publisher = {Bruckner Publishing},
+	year = {2011},
+	author = {Tomas Salamon},
+	pages = {220},
+	series = {Academic series},
+	address = {Repin, Czech Republic},
+	month = {9},
+	isbn = {978-80-904661-1-1},
+	abstract = {Although many publications deal with the theory of multi-agent systems
+	and agent-based simulations, information about their development
+	is scarce. The aim of this book is to meet this need, providing knowledge
+	about the design and development of agent-based simulations in an
+	easy and comprehensible way. With an accessible presentation supported
+	by practical examples, figures, schemes and source codes, the publication
+	is especially suitable as a textbook for introductory graduate-level
+	courses on multi-agent systems and agent-based modeling.},
+	keywords = {agent, agent-based modeling, model, development, methodology, Agentology}
+}
+
+@ARTICLE{Panait05cooperativemulti-agent,
+	author = {Liviu Panait and Sean Luke},
+	title = {Cooperative Multi-Agent Learning: The State of the Art},
+	journal = {Autonomous Agents and Multi-Agent Systems},
+	year = {2005},
+	volume = {11},
+	pages = {2005}
+}
+
+@article{Shoham:2009p113,
+	abstract = {Multiagent systems consist of multiple autonomous entities having different information and/or diverging interests. This comprehensive introduction to the field offers a computer science perspective, but also draws on ideas from game theory, economics, operations research, logic, philosophy and linguistics. It will serve as a reference for researchers in each of these fields, and be used as a text for advanced undergraduate and graduate courses. Emphasizing foundations, the authors offer a broad and rigorous treatment of their subject, with thorough presentations of distributed problem solving, non-cooperative game theory, multiagent communication and learning, social choice, mechanism design, auctions, coalitional game theory, and logical theories of knowledge, belief, and other aspects of rational agency. For each topic, basic concepts are introduced, examples are given, proofs of key results are offered, and algorithmic considerations are examined. An appendix covers background material in probability theory, classical logic, Markov decision processes, and mathematical programming.},
+	added-at = {2009-11-23T13:25:47.000+0100},
+	author = {Shoham, Yoav and Leyton-Brown, Kevin},
+	biburl = {https://www.bibsonomy.org/bibtex/26c35f7536794672441badf325e752073/achimpassen},
+	date-added = {2009-05-03 18:51:38 +0200},
+	date-modified = {2009-05-03 18:51:38 +0200},
+	interhash = {16fd1c64a5808e6bfa8a6e6d38f6530c},
+	intrahash = {6c35f7536794672441badf325e752073},
+	keywords = {algorithms, auctions, choice, communication, competition, cooperation, design, distributed game learning, logic, mechanism problem social solving theory,},
+	month = Feb,
+	pages = {1--532},
+	rating = {0},
+	timestamp = {2009-11-23T13:25:51.000+0100},
+	title = {Multiagent Systems: Algorithmic, Game-Theoretic, and Logical Foundations},
+	uri = {papers://C3D2787C-59DE-4F5F-B604-503052CE153D/Paper/p113},
+	year = 2009
+}
+
+@MISC{Garnier07thebiological,
+	author = {Simon Garnier and Jacques Gautrais and Guy Theraulaz},
+	title = { The biological principles of swarm intelligence},
+	year = {2007}
+}
+
+@ARTICLE{Mondada03swarm-bot:a,
+	author = {Francesco Mondada and Giovanni C. Pettinaro and Andre Guignard and Ivo W. Kwee and Dario Floreano and Jean-Louis Deneubourg and Stefano Nolfi and et al.},
+	title = {Swarm-Bot: a New Distributed Robotic Concept},
+	journal = {AUTONOMOUS ROBOTS},
+	year = {2003},
+	volume = {17},
+	pages = {2004}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%% distributed systems %%%%%%%%%%%%%
+@MISC{Buyya08cloudcomputing,
+	author = {Rajkumar Buyya and Chee Shin Yeo and Srikumar Venugopal and James Broberg and Ivona Brandic},
+	title = {Cloud Computing and Emerging IT Platforms: Vision, Hype, and Reality for Delivering Computing as the 5th Utility},
+	year = {2008}
+}
+
+@MISC{Armbrust10aview,
+	author = {Michael Armbrust and Armando Fox and Anthony D. Joseph and Randy Katz and Andy Konwinski and Gunho Lee and David Patterson and Ariel Rabkin and Ion Stoica and Matei Zaharia and et al.},
+	title = { A View Of Cloud Computing},
+	year = {2010}
+}
+
+@MISC{Fischer83impossibilityof,
+	author = {Michael J. Fischer and Nancy A Lynch and Michael S. Paterson},
+	title = {Impossibility of distributed consensus with one faulty process},
+	year = {1983}
+}
+
+@MISC{Saber03consensusproblems,
+	author = {Reza Olfati Saber and Richard M. Murray},
+	title = {Consensus Problems in Networks of Agents with Switching Topology and Time-Delays},
+	year = {2003}
+}
+
+@ARTICLE{Chandra96unreliablefailure,
+	author = {Tushar Deepak Chandra and Sam Toueg},
+	title = {Unreliable Failure Detectors for Reliable Distributed Systems},
+	journal = {Journal of the ACM},
+	year = {1996},
+	volume = {43},
+	pages = {225--267}
+}
+
+@ARTICLE{Schneider90implementingfault-tolerant,
+	author = {Fred B. Schneider},
+	title = {Implementing Fault-Tolerant Services Using the State Machine Approach: A Tutorial},
+	journal = {ACM COMPUTING SURVEYS},
+	year = {1990},
+	volume = {22},
+	pages = {299--319}
+}
+
+@ARTICLE{Défago04totalorder,
+	author = {Xavier Défago and André Schiper and Péter Urbán},
+	title = {Total order broadcast and multicast algorithms: Taxonomy and survey},
+	journal = {ACM COMPUTING SURVEYS},
+	year = {2004},
+	volume = {36},
+	pages = {2004}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%% Paxos %%%%%%%%%%%%%
+@MISC{Lamport98thepart-time,
+	author = {Leslie Lamport},
+	title = {The part-time parliament},
+	year = {1998}
+}
+
+@MISC{Lamport2001paxos-made-simple,
+	author = {Leslie Lamport},
+	title = {Paxos Made Simple},
+	year = {1998}
+}
+
+@TECHREPORT{Renesse15paxosmade,
+	author = {Robbert Van Renesse and Deniz Altinbuken},
+	title = { Paxos made moderately complex},
+	institution = {},
+	year = {2015}
+}
+
+@INPROCEEDINGS{Chandra07paxosmade,
+	author = {Tushar Chandra and Robert Griesemer and Joshua Redstone},
+	title = {Paxos made live: an engineering perspective},
+	booktitle = {In Proc. of PODC},
+	year = {2007},
+	pages = {398--407},
+	publisher = {ACM Press}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%% Raft %%%%%%%%%%%%%
+@MISC{Ongaro14insearch,
+	author = {Diego Ongaro and John Ousterhout},
+	title = {In search of an understandable consensus algorithm },
+	year = {2014}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+% other items
+
 @thesis{Artner2007,
 	author={Artner, Nicole Maria},
 	title={Analyse und Reimplementierung des Mean-Shift Tracking-Verfahrens},
