--- a/Documentation/LaTeX/main.tex
+++ b/Documentation/LaTeX/main.tex
@@ -1,3 +1,4 @@
+% !TeX document-id = {76f548ed-f9ee-4760-95bc-49941a65683b}
 %%% File encoding: UTF-8
 %%% äöüÄÖÜß  <-- keine deutschen Umlaute hier? UTF-faehigen Editor verwenden!
 
