--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -160,6 +160,101 @@
 }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%%%%% concurrent programming %%%%%%%%%%%%%
+@ARTICLE{Andrews83conceptsand,
+	author = {Gregory R. Andrews and Fred B. Schneider},
+	title = {Concepts and notations for concurrent programming},
+	journal = {ACM Computing Surveys},
+	year = {1983},
+	volume = {15},
+	pages = {3--43}
+}
+
+@MISC{Long10javaconcurrency,
+	author = {Fred Long and Dhruv Mohindra and Robert Seacord and David Svoboda and Fred Long and Dhruv Mohindra and Robert Seacord and David Svoboda},
+	title = {Java Concurrency Guidelines},
+	year = {2010}
+}
+
+@MISC{Hewitt_artificialintelligence,
+	author = {Carl Hewitt and Peter Bishop and Richard Steiger},
+	title = {Artificial Intelligence A Universal Modular ACTOR Formalism for Artificial Intelligence},
+	year = {}
+}
+
+@MISC{Graham_communicatingsequential,
+	author = {S. L. Graham and R. L. Rivest and C. A. R. Hoare},
+	title = {Communicating Sequential Processes},
+	year = {}
+}
+
+@MISC{Armstrong93concurrentprogramming,
+	author = {Joe Armstrong and Robert Virding and Claes Wikström and Mike Williams},
+	title = {Concurrent Programming in ERLANG},
+	year = {1993}
+}
+
+@MISC{Westrup14usingthe,
+	author = {Erik Westrup and Fredrik Pettersson and Mathias Bruce and Robert Rosengren},
+	title = {Using the Go Programming Language in Practice},
+	year = {2014}
+}
+
+@misc{hewitt2015actor,
+	title={Actor Model of Computation: Scalable Robust Information Systems}, 
+	author={Carl Hewitt},
+	year={2015},
+	eprint={1008.1459},
+	archivePrefix={arXiv},
+	primaryClass={cs.PL}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%% scala, akka %%%%%%%%%%%%
+
+@MISC{Odersky04anoverview,
+	author = {Martin Odersky and Stéphane Micheloud and Nikolay Mihaylov and Michel Schinz and Erik Stenman and Matthias Zenger and et al.},
+	title = { An Overview of the Scala Programming Language},
+	year = {2004}
+}
+
+@ARTICLE{Odersky09scalaactors:,
+	author = {Martin Odersky and Martin Odersky},
+	title = {Scala actors: Unifying thread-based and event-based programming},
+	journal = {Theor. Comput. Sci},
+	year = {2009}
+}
+
+@online{akka,
+	author={Lightbend},
+	title={Handling parallel processing in a high performance network},
+	subtitle={From Computers to Computer Systems},
+	url={https://doc.akka.io/docs/akka/2.6/typed/guide/actors-motivation.html}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%% embedded %%%%%%%%%%%%
+
+@MISC{Brooks05heterogeneousconcurrent,
+	author = {Christopher Brooks and Edward A. Lee and Xiaojun Liu and Yang Zhao and Haiyang Zheng and et al.},
+	title = {      Heterogeneous Concurrent Modeling and Design in Java (Volumes 1: Introduction to Ptolemy II) },
+	year = {2005}
+}
+
+@TECHREPORT{Xiong02anextensible,
+	author = {Yuhong Xiong and Edward A. Lee},
+	title = {An Extensible Type System for Component-Based Design},
+	institution = {},
+	year = {2002}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
+
 
 % other items
 
