--- a/Documentation/LaTeX/main.tex
+++ b/Documentation/LaTeX/main.tex
@@ -83,17 +83,17 @@
 \appendix                                            % Anhang 
 %%%----------------------------------------------------------
 
-\include{back/anhang_a}	% Technische Ergänzungen
-\include{back/anhang_b}	% Inhalt der CD-ROM/DVD
-\include{back/anhang_c}	% Chronologische Liste der Änderungen
-\include{back/anhang_d}	% Quelltext dieses Dokuments
+%\include{back/anhang_a}	% Technische Ergänzungen
+%\include{back/anhang_b}	% Inhalt der CD-ROM/DVD
+%\include{back/anhang_c}	% Chronologische Liste der Änderungen
+%\include{back/anhang_d}	% Quelltext dieses Dokuments
 
 %%%----------------------------------------------------------
 \MakeBibliography                        % Quellenverzeichnis
 %%%----------------------------------------------------------
 
 %%% Messbox zur Druckkontrolle ------------------------------
-\include{back/messbox}
+%\include{back/messbox}
 
 %%%----------------------------------------------------------
 \end{document}
