Fix tables size

--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -218,7 +218,7 @@
 	year = {2004}
 }
 
-@ARTICLE{Odersky09scalaactors:,
+@ARTICLE{scalaactors,
 	author = {Martin Odersky and Martin Odersky},
 	title = {Scala actors: Unifying thread-based and event-based programming},
 	journal = {Theor. Comput. Sci},
