--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -251,6 +251,58 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%% intro - future technologies %%%%%%%%%%%%
+
+@online{MITrobots,
+	author={Rachel Gordon},
+	title={Letting robots manipulate cables},
+	subtitle={Robotic gripper with soft sensitive fingers developed at MIT can handle cables with unprecedented dexterity},
+	url={https://news.mit.edu/2020/letting-robots-manipulate-cables-0713}
+}
+
+@online{MITrobots2,
+	author={Jennifer Chu},
+	title={What to Expect When You’re Expecting Robots},
+	subtitle={Book co-authored by Associate Professor Julie Shah and Laura Major SM ’05 explores a future populated with robot helpers},
+	url={https://news.mit.edu/2020/expect-when-expecting-robots-1022}
+}
+
+@online{MITiot,
+	author={Daniel Ackerman},
+	title={System brings deep learning to “internet of things” devices},
+	subtitle={Advance could enable artificial intelligence on household appliances while enhancing data security and energy efficiency},
+	url={https://news.mit.edu/2020/iot-deep-learning-1113}
+}
+
+@online{MITai,
+	author={Sabbi Lall},
+	title={Looking into the black box},
+	subtitle={Recent advances give theoretical insight into why deep learning networks are successful},
+	url={https://news.mit.edu/2020/looking-black-box-deep-learning-neural-networks-0727}
+}
+
+@online{MITbigData,
+	author={Larry Hardesty},
+	title={Making big data manageable},
+	subtitle={Technique shrinks data sets while preserving their fundamental mathematical relationships},
+	url={https://news.mit.edu/2016/making-big-data-manageable-1214}
+}
+
+@online{MITbigData2,
+	author={Abby Abazorius},
+	title={How data can help change the world},
+	subtitle={At IDSS celebration, speakers explore how data can be brought to bear on global challenges},
+	url={https://news.mit.edu/2016/IDSS-celebration-big-data-change-world-0926}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
+
+
+
+
 
 
 
