Finish editing Einleitung

--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -214,7 +214,7 @@
 
 @MISC{Odersky04anoverview,
 	author = {Martin Odersky and Stéphane Micheloud and Nikolay Mihaylov and Michel Schinz and Erik Stenman and Matthias Zenger and et al.},
-	title = { An Overview of the Scala Programming Language},
+	title = {An Overview of the Scala Programming Language},
 	year = {2004}
 }
 
@@ -238,7 +238,7 @@
 
 @MISC{Brooks05heterogeneousconcurrent,
 	author = {Christopher Brooks and Edward A. Lee and Xiaojun Liu and Yang Zhao and Haiyang Zheng and et al.},
-	title = {      Heterogeneous Concurrent Modeling and Design in Java (Volumes 1: Introduction to Ptolemy II) },
+	title = {Heterogeneous Concurrent Modeling and Design in Java (Volumes 1: Introduction to Ptolemy II) },
 	year = {2005}
 }
 
@@ -297,6 +297,29 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%% other cites for Einleitung %%%%%%%%%%%%
+
+@online{DroneOperator,
+	author={EU Aviation Safety Agency},
+	title={Drone regulations},
+	subtitle={Who is a drone operator},
+	url={https://www.easa.europa.eu/faq/116447}
+}
+
+@online{EPFLdrones,
+	author={EPFL Research},
+	title={Aerial Robotics},
+	url={https://www.epfl.ch/labs/lis/research/aerial-robotics/}
+}
+
+@INPROCEEDINGS{Hunt_zookeeper:wait-free,
+	author = {Patrick Hunt and Mahadev Konar and Flavio P. Junqueira and Benjamin Reed},
+	title = {ZooKeeper: Wait-free Coordination for Internet-scale Systems},
+	booktitle = {In USENIX Annual Technical Conference},
+	year = {}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
