--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -321,6 +321,15 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%%%%%%%%%% other cites for Analyse %%%%%%%%%%%%
+
+@MISC{chubby,
+	author = {Mike Burrows},
+	title = {The Chubby lock service for loosely-coupled distributed systems},
+	year = {2006}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
