--- a/Documentation/LaTeX/references.bib
+++ b/Documentation/LaTeX/references.bib
@@ -329,6 +329,12 @@
 	year = {2006}
 }
 
+@MISC{EPFLswarm,
+	author = {Marco Dorigo et al.},
+	title = {Evolving Self-Organizing Behaviors for a Swarm-bot},
+	year = {2004}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
